# librespot-ui

./: .gitignore  Cargo.toml  Dockerfile  cross-compile.sh
librespot-ui-client/: package-lock.json  package.json  tsconfig.node.json  vite.config.ts
librespot-ui-client/src/: App.tsx
librespot-ui-client/src/components/: dropdown.tsx  home.tsx  libreButtons.tsx  libreStatus.tsx  navBar.tsx
librespot-ui-client/src/hooks/: librespot.ts  user.ts
librespot-ui-client/src/scss/: styles.scss
librespot-ui-client/src/types/: librespot.ts  user.ts
src/: main.rs
src/librespot/: mod.rs  spawner.rs
src/models/: app_error.rs  mod.rs  session.rs  user.rs
src/routes/: auth.rs  librespot.rs  mod.rs  user_info.rs
util/: docker-build.sh
