[package]
name = "librespot-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-session = "3.0.0"
axum = "0.8.1"
clap = { version = "4.5.29", features = ["derive"] }
cookie = "0.18.1"
oauth2 = "5.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs"] }
